--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.App {
-  text-align: center;
-}
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +32,46 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+select {
+  margin-right: 20px;
+  
+}
+
+.App {
+  text-align: center;
+  padding: 20px;
+}
+
+.Error {
+  text-align: center;
+  color: red;
+  margin: 20px 0px;
+}
+
+nav {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  margin-bottom: 50px;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+
+ul li {
+  margin: 0 15px;
+  cursor: pointer;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
